<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_outline_star_outline_24"
        android:orderInCategory="2"
        android:title="@string/saved"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/accountFragment"
        android:title="@string/account"
        android:orderInCategory="3"
        android:icon="@drawable/ic_outline_account_circle_24"
        app:showAsAction="ifRoom">

    </item>


</menu>