<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:autoTransition="animateToEnd"
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="500">
       <KeyFrameSet>
       </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:layout_height="180dp"
            android:layout_marginTop="60dp"
            motion:layout_constraintTop_toTopOf="parent"
            android:layout_width="180dp"
            android:id="@+id/shapeableImageView"
            motion:layout_constraintEnd_toStartOf="parent" />
        <Constraint
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            motion:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
            android:layout_width="wrap_content"
            android:id="@+id/signInButton"
            motion:layout_constraintStart_toEndOf="parent" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
    </ConstraintSet>
</MotionScene>