...
    <string name="about">About</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="share_article">Share Article</string>
    <string name="save_article">Save Article</string>
    <string name="share_greeting">from TechPop\n\n</string>
    <string name="share_action1">\nLink</string>
    <string name="saved">Saved</string>
    <string name="you_have_no_saved_articles">You Have No Saved Articles</string>
    <string name="logger">Logger</string>
    <string name="techpop">TechPop</string>
    <string name="view_full_article_in_web_browser">View full article in web browser</string>
    <string name="image_for_article">Image for article</string>
    <string name="build_date">Build Date:</string>
...
